--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -59,11 +59,34 @@
   padding: 10px 25px;
   margin: 5px;
 }
-
-.background-green:focus {
-  background-color: green !important;
+.background-green-focus {
+  background-color: darkgreen;
+  border-radius: 4px;
+  padding: 10px;
+  padding: 10px 25px;
+  margin: 5px;
 }
-
+.background-green-land {
+  background-color: darkgreen;
+  border-radius: 4px;
+  padding: 10px;
+  padding: 10px 25px;
+  margin: 5px;
+}
+.background-green-launch {
+  background-color: darkgreen;
+  border-radius: 4px;
+  padding: 10px;
+  padding: 10px 25px;
+  margin: 5px;
+}
+.background-green-launch {
+  background-color: darkgreen;
+  border-radius: 4px;
+  padding: 10px;
+  padding: 10px 25px;
+  margin: 5px;
+}
 .footer-line {
   padding: 30px;
   text-align: center;
@@ -95,6 +118,10 @@
   text-align: center;
   margin: 0;
   margin-top: 35px;
+}
+.launch-year {
+  text-align: center;
+  margin: 0;
 }
 /***** Mobile View *****/
 @media only screen and (max-width: 700px) {
