--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -84,7 +84,7 @@
       </div>
     </div>
     <h1 *ngIf="launchesCount == 0" class="shift-letter">
-     Empty Record
+     Data doesn't exist for this combination!
     </h1>
   </div>
 </div>
